--- a/Milestone 03/style.css
+++ b/Milestone 03/style.css
@@ -1,50 +1,51 @@
-/* Styling form & resume sections */
- body {
+
+body {
     font-family: 'Times New Roman', Times, serif;
     margin: 20px;
     padding: 0;
-    background-color: #E8F5E9;
+    background-color: rgb(228, 225, 225);
 }
 
 form {
     margin: auto;
-    background-color: #077463;   
+    background-color: rgb(228, 225, 225);
     border-radius: 8px;
-    box-shadow: 0 4px 8px #004D40;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     padding: 20px;
     max-width: 600px;
 }
 
 h1 {
     text-align: center;
-    color: (#000000);
+    color: rgb(28, 12, 87);
 }
 
 fieldset {
-    border: 2px solid #000000;
+    border: 2px solid rgb(28, 12, 87);
     border-radius: 8px;
     padding: 20px;
     margin-bottom: 20px;
-    background-color: #b9f5bf;
+    background-color: rgb(228, 225, 225);
 }
 
 legend {
     font-weight: bold;
     text-align: left;
-    color: black;
+    color: rgb(28, 12, 87);
 }
 
 label {
     display: block;
     margin-top: 10px;
-    color: #000000;
+    color: rgb(37, 24, 92);
+
 }
 
 input,textarea {
     margin-top: 4px;
     padding: 8px;
     width: calc(100% - 1px);
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgb(28, 12, 87);
     border-radius: 4px;
     box-sizing: border-box;
 }
@@ -52,11 +53,11 @@ input,textarea {
 button {
     display: block;
     width: 100%;
-    background-color: #b9f5bf;
-    color: #004D40;  
+    background-color: rgb(228, 225, 225);
+    color: rgb(28, 12, 87);
     border: none;
     border-radius: 4px;
-    box-shadow: 0 4px 8px  #000000;
+    box-shadow: 0 4px 8px rgb(28, 12, 87);
     margin-top: 10px;
     font-size: 18px;
     font-family: 'Times New Roman', Times, serif;
@@ -72,12 +73,14 @@ button :hover {
     max-width: 600px;
     margin: auto;
     padding: 20px;
-    border: 2px solid #b9f5bf;
+    border: 2px solid rgb(228, 225, 225);
     border-radius: 8px;
-    background-color: #b9f5bf;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    background-color: rgb(228, 225, 255);
+    box-shadow: 0 4px 8px rgb(28, 12, 87);
 }
 
 #resume-display h2 {
-    color: rgb(0, 0, 0);
+    color: black;
 }
+
+
